--- a/DoiDiem.html
+++ b/DoiDiem.html
@@ -5,32 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đổi điểm</title>
-    <link rel="stylesheet" href="/html/css/ChiTietKM.css" />
+    <link rel="stylesheet" href="/html/css/Style.css" />
   </head>
-
   <body>
-    <div class="container">
-      <div class="header">
-        <div class="header__container">
-          <div class="header__item--1">
+    <div class="ChiTietKM__container">
+      <div class="ChiTietKM__header">
+        <div class="ChiTietKM__header--container">
+          <div class="ChiTietKM__item--1">
             <img src="/images/freeship.png" alt="" />
             <p>MIỄN PHÍ VẬN CHUYỂN</p>
           </div>
-          <div class="header__item--2">
-            <div class="item__container">
+          <div class="ChiTietKM__item--2">
+            <div class="ChiTietKM__item--container">
               Hình thức thanh toán chuyển khoản
-              <div class="item--maxprice">
+              <div class="ChiTietKM--price">
                 <p>Tối đa 50k</p>
                 <p>05 điểm</p>
               </div>
-              <span class="item--hsd">Hạn sử dụng: 31/10/2021</span>
+              <span class="ChiTietKM--date">Hạn sử dụng: 31/10/2021</span>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="body__container">
-        <div class="body--point">05 điểm</div>
+      <div class="ChiTietKM__body--container">
+        <div class="DoiDiem--point">05 điểm</div>
         <h2>Ưu đãi</h2>
         <p>
           Lượt sử dụng có hạn. Nhanh tay kẻo lỡ bạn nhé. Ưu đãi miễn phí vận
@@ -50,8 +48,7 @@
           lực đến 23:59 31/10/2021
         </p>
       </div>
-
-      <div class="footer__button">
+      <div class="ChiTietKM__footer--button">
         <button>Dùng ngay</button>
       </div>
     </div>
