--- a/TrangCaNhan.html
+++ b/TrangCaNhan.html
@@ -15,9 +15,9 @@
       rel="stylesheet"
       href="/IMAGES/ICONS/fontawesome-free-5.15.4-web/css/all.min.css"
     />
-    <script src="/html/js/Javascript.js" defer></script>
+    <script src="./JS/TrangCaNhan.js" defer></script>
   </head>
-  <body>
+  <body ng-app="angularApp">
     <div id="myHeader2" class="VerHeader__container">
       <a
         href="javascript:void(0)"
@@ -81,7 +81,7 @@
     <div class="TrangCaNhan__body--container">
       <h2>Tài khoản của tôi</h2>
       <div class="TrangCaNhan__item--1">
-        <img src="/images/avatar.png" alt="" />
+        <img src="/images/avatar3.png" alt="" />
       </div>
       <div class="TrangCaNhan__item--2">
         <h1 id="tenDangNhap"></h1>
@@ -130,7 +130,6 @@
         </p>
         <p>Copyright @2021 Tách Creative Studio</p>
       </div>
-
       <div class="Footer--right">
         <p class="Footer__heading">LIÊN HỆ VỚI CHÚNG TÔI</p>
         <p><img src="/images/footer-fb.png" alt="" /> Tách studio</p>
